objects/Activity_Record__c.object
<CustomObject>
    <description>Record to which any activity recorded back to a TE customer email address will be associated</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Digikey Sample request is tracked here</description>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DigikeyAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityDateTime__c</fullName>
        <label>ActivityDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Originally called Order Date, this field is the date of the activity.</description>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Notes__c</fullName>
        <description>Use this space to record any notes relating to this particular activity for this person</description>
        <inlineHelpText>Use this space to record any notes relating to this particular activity for this person</inlineHelpText>
        <label>Activity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Rating_Desc__c</fullName>
        <description>Activity Rating Description</description>
        <inlineHelpText>Activity Rating Description</inlineHelpText>
        <label>Activity Rating Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Source__c</fullName>
        <description>Which file or feed did this activity come from?</description>
        <inlineHelpText>Which file or feed did this activity come from?</inlineHelpText>
        <label>Activity Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>This represents the type of activity, and is used for prioritizing</description>
        <inlineHelpText>This represents the type of activity, and is used for prioritizing.  Hand Raising Activity is critical, and needs attention as soon as possible</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                    <default>true</default>
                    <label>Cold</label>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

Additional Comments or Description</description>
        <inlineHelpText>Additional Comments or Description</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apply_Rating_to_WebProfile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the rating on this Activity should be applied to the Web Profile Lead</description>
        <label>Apply Rating to WebProfile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <label>Area of Interest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Email__c</fullName>
        <description>This is the field showing the email associated to the activity loaded.</description>
        <inlineHelpText>Email address associated to the activity loaded.</inlineHelpText>
        <label>Associated Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Batch_Load_Date_Time__c</fullName>
        <label>Batch Load Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CO_Lead_Id__c</fullName>
        <label>CO Lead Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

CallDisposition</description>
        <label>Call Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

CallType</description>
        <label>Call Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Tracking_Code__c</fullName>
        <inlineHelpText>CID field from Site Catalyst</inlineHelpText>
        <label>Campaign Tracking Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Activity_Records_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Activity_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CastIron_JobID__c</fullName>
        <description>This field is for Cast Iron</description>
        <label>CastIron_JobID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Activity_Records_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <label>Date Needed:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Derived_Industry__c</fullName>
        <description>Industry derived by SiteCatalyst</description>
        <label>Derived Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

In Minutes</description>
        <inlineHelpText>In Minutes</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

In Hours</description>
        <inlineHelpText>In Hours</inlineHelpText>
        <label>Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.</description>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Sales_Dollars__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.</description>
        <label>Estimated Sales Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Counted_for_Digikey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Counted for Digikey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_Products__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

Parts, Product Family, etc</description>
        <inlineHelpText>Parts, Product Family, etc</inlineHelpText>
        <label>Interested Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Activity_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked2Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True   = already linked to parent
False = not yet linked to parent</description>
        <label>Linked2Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Activity_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Number of sample items requested</description>
        <label>Sample Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Type_Related_To__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

For the standard &quot;Related To&quot; field.</description>
        <inlineHelpText>For the standard &quot;Related To&quot; field.</inlineHelpText>
        <label>Object Type Related To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Agent_Email__c</fullName>
        <label>PIC Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIC_Agent_Name__c</fullName>
        <label>PIC Agent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Volume__c</fullName>
        <label>Potential Volume</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Rating_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Previous Rating Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For rollup of standard activities as part of Eloqua.

IsPrivate</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Value__c</fullName>
        <description>Used during the sample request process.  The value of project driving the sample request</description>
        <label>Project Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; $100,000</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 - $1 million</fullName>
                </value>
                <value>
                    <fullName>&gt; $1 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFQ_Order_Number__c</fullName>
        <description>This lead holds the RFQ number generated when someone uses the automated Request for Quote System.  The generated number can be used to reference information on the quote located in the Quote System.</description>
        <label>RFQ Order Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFQ_Order_Status__c</fullName>
        <description>Indicates the status of the requested Quotes.  See below for usage</description>
        <inlineHelpText>Quote Completed = quote generated immediately or quote needing manual intervention has been completed

In Process = quote needing manual intervention is still incomplete</inlineHelpText>
        <label>RFQ Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Part_Number_s__c</fullName>
        <description>Any part numbers search on or reviewed during a user&apos;s session as captured.</description>
        <label>Related Part Number(s)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Right_Now_Contact_Id__c</fullName>
        <label>Right Now Contact Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_Now_Opportunity_Id__c</fullName>
        <label>Right Now Opportunity Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Name__c</fullName>
        <description>Captures the description of the project driving the sample request</description>
        <label>Sample_Application_Name_Descr</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Ship_Date__c</fullName>
        <description>Date Samples actually shipped to requestor</description>
        <label>Sample Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

For Activity (Task)</description>
        <inlineHelpText>For Activity (Task)</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

For Activity</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_SE__c</fullName>
        <label>Suggested SE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECewt5__c</fullName>
        <label>TECewt5</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECewt7__c</fullName>
        <description>The ID of the user&apos;s cookie when logging into a TE web system</description>
        <label>TECewt7</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>For rollup of standard activities as part of Eloqua.

Type from the Activity(Task/Event)</description>
        <inlineHelpText>Type from the Activity(Task/Event)</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Tradeshow_Name__c</fullName>
        <label>Webinar Tradeshow Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_view_date__c</fullName>
        <label>last_view_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lead_18_digit_Id__c</fullName>
        <formula>Lead__c
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Lead__c,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Lead__c,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Lead__c,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Lead__c,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Lead__c,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Lead__c,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Lead__c,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Lead__c,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Lead__c,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Lead__c,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Lead__c,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Lead__c,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Lead__c,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Lead__c,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Lead__c,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lead 18 digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sample_application_name__c</fullName>
        <label>sample_application_name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sample_order_num__c</fullName>
        <label>sample_order_num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <externalId>true</externalId>
        <label>unique_id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Activity Record</label>
    <nameField>
        <label>Activity Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>